--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <p>A full-featured blog application with article management, user authentication, and rich text editing features.</p>
             </div>
             <div class="project" data-aos="zoom-in" data-aos-delay="300">
-                <img src="foto/screenshot.webp" alt="Project 4">
+                <img src="foto/smash-business-template.jpg" alt="Project 4">
                 <h3>Landing Page for Startups</h3>
                 <p>A stylish and highly-converting landing page designed specifically for startup companies looking to capture leads effectively.</p>
             </div>
